fix z-index for footer and sticky

--- a/css/main.css
+++ b/css/main.css
@@ -497,7 +497,7 @@ footer {
     bottom: 0;
     overflow: hidden;
     height:auto;
-    z-index: -1;
+    z-index: 2;
 }
 
 footer .content{
